Fix page shift

--- a/css/main.css
+++ b/css/main.css
@@ -12,6 +12,11 @@
 	unicode-range: U+0E00-0E7F;*/
 }
 
+html
+{
+	overflow-y: scroll;
+}
+
 h1, h2
 {
 	font-family: RSURegular, Arial, Helvetica, sans-serif;
